--- a/index.html
+++ b/index.html
@@ -6,28 +6,135 @@
     <title>Codificandos</title>
     <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
-  <body>
-    <div>
+  <body class="light">
+    <div class="container">
       <nav>
-        <p>logo</p>
-        <p>hamburguesa</p>
+        <p>Abejitas <br />del sur</p>
+        <a>Inicio</a>
+        <a>Catálogo</a>
+        <a>Ofertas</a>
+        <a>Contacto</a>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+          <title>menu</title>
+          <path d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z" />
+        </svg>
       </nav>
-      <section>
+      <aside>
         <label>Selecciona filtro</label>
         <select>
-          <option>1</option>
-          <option>2</option>
-          <option>3</option>
+          <option>Alimentos</option>
+          <option>Apiterapia</option>
+          <option>Plagas y parásitos</option>
         </select>
-      </section>
+      </aside>
       <main>
-        <div>1</div>
-        <div>1</div>
-        <div>1</div>
-        <div>1</div>
-        <div>1</div>
+        <div class="item">
+          <img src="./assets/img/prod1.jpg" />
+          <h1>Miel</h1>
+          <button>Ver Mas</button>
+        </div>
+        <div class="item2">
+          <img src="./assets/img/prod2.jpg" />
+          <h1>Miel Monofloral</h1>
+          <button>Ver Mas</button>
+        </div>
+        <div class="item2">
+          <img src="./assets/img/prod3.jpg" />
+          <h1>Polinización</h1>
+          <button>Ver Mas</button>
+        </div>
+        <div class="item2">
+          <img src="./assets/img/prod4.jpg" />
+          <h1>Cera estampada</h1>
+          <button>Ver Mas</button>
+        </div>
+        <div class="item2">
+          <img src="./assets/img/prod5.jpg" />
+          <h1>Velas</h1>
+          <button>Ver Mas</button>
+        </div>
+        <div class="item2">
+          <img src="./assets/img/prod6.jpg" />
+          <h1>Marcos</h1>
+          <button>Ver Mas</button>
+        </div>
+        <div class="item2">
+          <img src="./assets/img/prod7.jpg" />
+          <h1>Reinas</h1>
+          <button>Ver Mas</button>
+        </div>
+        <div class="item2">
+          <img src="./assets/img/prod8.jpg" />
+          <h1>Plagas</h1>
+          <button>Ver Mas</button>
+        </div>
+        <div class="item2">
+          <img src="./assets/img/prod9.jpg" />
+          <h1>Implementos</h1>
+          <button>Ver Mas</button>
+        </div>
+        <div class="item2">
+          <img src="./assets/img/prod1.jpg" />
+          <h1>Miel</h1>
+          <button>Ver Mas</button>
+        </div>
+        <div class="item2">
+          <img src="./assets/img/prod2.jpg" />
+          <h1>Miel Monofloral</h1>
+          <button>Ver Mas</button>
+        </div>
+        <div class="item2">
+          <img src="./assets/img/prod3.jpg" />
+          <h1>Polinización</h1>
+          <button>Ver Mas</button>
+        </div>
+        <div class="item2">
+          <img src="./assets/img/prod4.jpg" />
+          <h1>Cera estampada</h1>
+          <button>Ver Mas</button>
+        </div>
+        <div class="item2">
+          <img src="./assets/img/prod5.jpg" />
+          <h1>Velas</h1>
+          <button>Ver Mas</button>
+        </div>
+        <div class="item2">
+          <img src="./assets/img/prod6.jpg" />
+          <h1>Marcos</h1>
+          <button>Ver Mas</button>
+        </div>
+        <div class="item2">
+          <img src="./assets/img/prod7.jpg" />
+          <h1>Reinas</h1>
+          <button>Ver Mas</button>
+        </div>
       </main>
-      <footer>footer</footer>
+      <div class="pgnum">
+        <a href="#">&laquo;</a>
+        <!-- Flecha para ir a la página anterior -->
+        <a href="#">1</a>
+        <a href="#">2</a>
+        <a href="#">3</a>
+        <a href="#">4</a>
+        <a href="#">5</a>
+        <a href="#">6</a>
+        <a href="#">&raquo;</a>
+        <!-- Flecha para ir a la página siguiente -->
+      </div>
+      <footer>
+        <p>Contáctanos!!</p>
+        <ul>
+          <li>Instagram @abejitasdelsur</li>
+          <li>Facebook @abejitasdelsur</li>
+          <li>TikTok @abejitasdelsur</li>
+          <li>YouTube @abejitasdelsur</li>
+          <li>
+            <button>
+              Haz click aqui para enviar un mensaje a nuestro equipo de ventas
+            </button>
+          </li>
+        </ul>
+      </footer>
     </div>
   </body>
 </html>
